test/success/unit/_succ_lformarg_2.hs
f' :: String -> Char
f' x = 'a'
main = print "hello"