test/fail/integration/_fail_grammar_type_2.hs
x :: Int -> int
main = print "hello"